# rewindex-web

./: .gitignore  AI-SETUP.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
rewindex_web/: __init__.py  __main__.py  app.py  data.py  hooks.py
rewindex_web/static/: app.js  style.css
rewindex_web/templates/: index.html
